Public/css/style.css
/* Style CSS Blog Projet 5 V.2 */

/* Définition des polices */ 

@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');

@font-face {
    font-family: 'Aquire';
    src: url('../font/Aquire-BW0ox.otf') format("opentype");
}
@font-face {
    font-family: "Aquire Bold";
    src: url('../font/AquireBold-8Ma60.otf') format("opentype");
}

/* -------------------------------------------------- */

/* ---------- Élements principaux ---------- */

html {
    background-color: #F8F9FA ;
    font-size: 100%;
    max-width: 90%;
    min-height: 1500px;
    margin-left: 5%;
    padding-left: 2%;
    padding-right: 2%;
}

body {
    border-left: thick double black;
    border-right: thick double black;
}

#bloc_page {
    background-color: #F8F9FA;
    margin-top: 4%;
}

@media screen and (max-width: 992px) {
    html {
        max-width: 900px;
        background-color: lightblue;
        margin-left: 5%;  
    }

    h3 {
        font-size: 4rem;
    }
}

/* ------------------------------ Haut de page ------------------------------ */

.headerPage {
    display: flex;
    justify-content: space-around;
    padding-bottom: 3%;
    font-family: "Aquire", "sans-serif";
}

.headerPage img {
    margin-left: 2%;
}

.headerPage button {
    margin-right: 2%;
}

.headerPage h1 {
    padding-top: 1%;
    margin-left: 10%;
    margin-right: 10%;
    font-size: 3rem;
}

@media screen and (max-width: 992px) {
    .headerPage img {
        margin-top: 4%;
        width: 60px;
        height: 60px;
    }

    .headerPage h1 {
        padding-top: 5%;
        font-size: 2.3rem;
    }
}

/* ---------- section Menu Navbar ---------- */

#header_Nav {
    border-bottom: 2px solid black;
    padding-left: 1%;
}

.navbar {
    background: #F8F9FA;
    padding: 3%;
    min-height: 12vh;
}

.navbar .navbar-brand a {
    padding: 1rem 0;
    display: block;
    text-decoration: none;
}

.navbar-brand {
    font-family: "Aquire", sans-serif;
    font-size: 2.5rem;
    color: black;
}

.navbar-brand:hover {
    color: black;
    border-top: 2px solid black;
}

.navbar-toggler span {
    display: block;
    width: 22px;
    height: 2px;
    border: 1px;
    background: black;
}

.navbar-toggler span + span {
    margin-top: 4px;
    width: 18px;
    margin-left: 4px;
}

.navbar-toggler span + span + span {
    width: 10px;
    margin-left: 12px;
}

.nav-item {
    margin-left: 5%;
    padding: 0% 18%;
}

.navbar-expand-lg .navbar-nav .nav-link {
    color: black;
    font-family: "Aquire", sans-serif;
    font-size: 1.4rem;
    position: relative;
    text-align: start;
}

.navbar-expand-lg .navbar-nav .nav-link:hover {
    border-top: 2px solid black;
}

.navbar-nav button {
    visibility: hidden;
}

.dropdown-menu {
    width: 320px;
    padding-right: 5%;
}

.dropdown-menu button {
    visibility: visible;
}

.dropdown-item {
    font-family: "Aquire", sans-serif;
    font-size: 1.1rem;
}

.formDrop {
    background-color: white;
    border: 1px solid black;
    margin: 5%;
    padding: 5%;
}

.formDrop strong {
    font-family: "Aquire", "sans-serif";
}
 

/*@media screen and (max-width: 992px) {
    
}*/

/* ------------------------------ Contenu ------------------------------ */

#content {
    text-align: justify;
    margin-left: 5%;
    width: 90%;
    min-height: 900px;
    padding-top: 1%;
    margin-top: 3%;
    font-family: "Aquire", "Aquire Bold", "sans-serif";
}
.alert-success, .alert-danger {
    font-family: "Aquire", "AquireBold", "sans-serif";
}

/* ---------- Page d'inscription ---------- */

.formInscription {
    background-color: white;
    font-family: "Raleway";
    border: 2px solid black;
    padding: 2%;
}

.formInscription h3 {
    font-family: "Aquire";
    margin-left: 1%;
}

.formInscription button {
    font-family: "Aquire";
}

.formRegister {
    margin-top: 5%;
    padding-bottom: 3%;
}

.formRegister label {
    margin-left: 3%;
}

@media screen and (max-width: 992px) {
    .formInscription input {
        margin-left: 2%;
        max-width: 700px;
    }

    .formInscription button {
        margin: 3%;
    }
}

/* ---------- Contenu liste articles ---------- */

.list_billet {
    max-width: 75%;
    border-bottom: 2px solid black;
    margin-top: 5%;
    margin-bottom: 5%;
    margin-left: 10%;
    font-family: "Aquire", "sans-serif";
    font-size: 1.2rem;
}

.list_billet h5 {
    font-size: 1.5rem;
    padding-bottom: 1%;
}

.list_billet a {
    color: #289d28;
    text-decoration: none;
    /*margin-left: 5%;*/
}

.list_billet a:hover {
    color: black;
    border-bottom: 1px solid black;
}

.list_billet em {
    font-family: "Raleway", "sans-serif";
}

@media screen and (max-width: 992px) {
    .listBilletTitle h3 {
        font-size: 1.5rem;
    }

    .list_billet h5 {
        font-size: 1.2rem;
    }

    .list_billet p {
        font-size: 1rem;
    }
}

/* ---------- Contenu détail article ---------- */

.detail {
    font-family: "Aquire", "AquireBold", "sans-serif";
}

.detail h3 {
    font-size: 2rem;
    text-align: center;
}

.detail h4 {
    font-size: 1.6;
    margin-left: 2%;
}

.detail h5 {
    font-size: 1.5rem;
    padding-top: 1%;
    margin-left: 5%;
}

.detail p {
    font-family: "Raleway", "sans-serif";
    font-size: 1.3rem;
    padding-bottom: 2%;
    margin-left: 10%;
    margin-right: 5%;
}

.detail h6 {
    font-size: 1.1rem;
    padding-top: 1%;
    margin-left: 4%;
    margin-bottom: 2%;
}

.updateArticle {
    display: flex;
    justify-content: space-between;
    margin-left: 10%;
}

.deleteArticle {
    margin-left: 25%;
    margin-top: 1%;
}

@media screen and (max-width: 992px) {
    .detail h3 {
        font-size: 1.8rem;
    }

    .detail h4 {
        font-size: 1.5rem;
    }

    .detail h5 {
        font-size: 1.3rem;
    }

    .updateArticle {
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
    }

    .deleteArticle {
        margin-left: 5%;
    }
}

/* ---------- Commentaire détail article ---------- */

.detailComSection {
    font-family: "Aquire", "AquireBold", "sans-serif";
    max-width: 90%;
}

.detailComSection h4 {
    font-size: 1.6rem;
    margin-left: 10%;
    margin-bottom: 4%;
}

.detailComSection h5 {
    font-size: 1.4rem;
    margin-left: 15%;
    margin-bottom: 2%;
    padding-top: 2%;
}

.detailComSection p {
    font-size: 1rem;
    margin-left: 20%;
    margin-bottom: 2%;
    font-family: "Raleway", "sans-serif";
}

.detailComSection h6 {
    font-family: "Raleway", "sans-serif";
    font-size: 1.1rem;
    padding-left: 3%;
    margin-left: 15%;
    margin-bottom: 2%;
    padding-bottom: 2%;
}

.msgWarning p {
    text-align: center;
    padding-top: 2%;
}

.btnModifyCom {
    display: flex;
    justify-content: space-between;
    margin-left: 20%;
    padding-bottom: 2%;
    
}

.buttonComment {
    margin-left: 25%;
}

.textAddComment {
    font-family: "Raleway", sans-serif;
}

.divider {
    margin-left: 15%;
    border-bottom: 2px solid black;
}

@media screen and (max-width: 992px) {

}

/* ------------------------------ Section footer ------------------------------ */

footer {
    background-color: #F8F9FA;
}

#footer_basic {
    border-top: 2px solid black;
    padding-top: 3%;
    margin-top: 5%;
}

/* ---------- réseaux sociaux ---------- */

.navSocial h4 {
    font-family: "Aquire", "AquireBold", "sans-serif";
    text-align: center;
    padding-bottom: 15%;
    padding-top: 10%;
}

.navSocial ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.navSocial li {
    list-style-type: none;
}

.navSocial img {
    padding-top: 10%;
    margin-bottom: 10%;
    margin-left: 10%;
}

.navSocial a {
    text-decoration: none;
    font-family: "Aquire", "sans-serif";
    color: black;
    font-size: 1rem;
}

.navSocial a:hover {
    color: #289d28;
    border-bottom: 1px solid #289d28;
}

@media screen and (max-width: 992px) {
    .navSocial {
        margin-bottom: 10%;
    }

    .navSocial h4 {
        text-align: center;
        padding-top: 4%;
        padding-bottom: 2;
    }

    .navSocial img {
        margin-right: 50%;
        width: 100px;
        height: 100px;
    }

    .navSocial ul {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

    }

    .navSocial a {
        margin-left: 10%;
    }
}

/* ---------- Formulaire de contact ---------- */

.form_contact {
    background-color: white;
    border: 2px solid black;
    padding-left: 5%;
    padding-right: 5%;
}

.form_contact h4 {
    font-family: "Aquire", "AquireBold", "sans-serif";
    text-align: center;
    padding-bottom: 2%;
    padding-top: 5%;
}

.form_contact input {
    margin-bottom: 3%;
}

.formContactButton {
    margin-top: 3%;
    margin-bottom: 5%;
}

.formContactButtonSubmit {
    margin-left: 10%;
}

.formContactButtonReset {
    margin-left: 10%;
}

/* ---------- Liens utiles ---------- */

.menu_footer {
    font-family: "Aquire", "AquireBold", "sans-serif";
}

.menu_footer h4 {
    text-align: center;
    padding-top: 15%;
    padding-bottom: 10%;
}

.menu_footer li {
    list-style-type: square;
    margin-left: 15%;
    padding-top: 15%;
}

.menu_footer a {
    text-decoration: none;
    color: black;
}

.menu_footer a:hover {
    color: #289d28;
    border-bottom: 1px solid #289d28;
}

@media screen and (max-width: 992px) {
    .menu_footer h4 {
        padding-bottom: 0%;
    }

    .menu_footer li {
        list-style-type: square;
        margin-left: 25%;
        padding-top: 8%;
        padding-bottom: 2%;
    }
}

/* ---------- Copyright ---------- */

.copyright p, a {
    margin-top: 4%;
    margin-bottom: 4%;
    text-align: center;
}

/* ------------------------------ Zone Admin ------------------------------ */

#admin {
    margin-top: 5%;
}

/* ---------- Formulaire nouvel article ---------- */

.formNewPost {
    font-family: "Raleway", "sans-serif";
    border: 2px solid black;
    padding-top: 3%;
    background-color: white;
}

.formNewPost h4 {
    font-family: "Aquire", "AquireBold", "sans-serif";
    text-align: center;
    padding-bottom: 2%;
}

.formNewPost input {
    margin-bottom: 4%;
}

.formNewPost label {
    font-size: 1.2rem;
    font-weight: bold;
}

.formNewPost button {
    margin-top: 5%;
    margin-bottom: 3%;
}

/* ---------- Modération des commentaires ---------- */

.commentModeration h4 {
    text-align: center;
    padding-top: 5%;
    padding-bottom: 5%;
}

.commentModeration h5 {
    margin-left: 10%;
}
 .commentModeration p, em {
    margin-left: 15%;
    padding-bottom: 2%;
 }

 .commentButtonModeration {
    margin-top: 2%;
    margin-left: 25%;
 }

 .dividerCommentModeration {
    border-bottom: 2px solid black;
    padding-bottom: 4%;
    padding-top: 4%;
 }

/* crash test */

